--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,3 @@
-
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
 @use '@angular/material' as mat;
@@ -20,13 +19,10 @@ $manage-shop-warn: mat.define-palette(mat.$red-palette);
 
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as "color" or "typography".
-$manage-shop-theme: mat.define-light-theme((
-  color: (
-    primary: $manage-shop-primary,
-    accent: $manage-shop-accent,
-    warn: $manage-shop-warn,
-  )
-));
+$manage-shop-theme: mat.define-light-theme((color: (primary: $manage-shop-primary,
+                accent: $manage-shop-accent,
+                warn: $manage-shop-warn,
+            )));
 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
@@ -37,16 +33,16 @@ $manage-shop-theme: mat.define-light-theme((
 @import 'scss/themes/font/theme-font';
 
 // main framework
-@import 'node_modules/bootstrap/scss/functions';
-@import 'node_modules/bootstrap/scss/variables';
+@import '../node_modules/bootstrap/scss/functions';
+@import '../node_modules/bootstrap/scss/variables';
 @import 'scss/settings/custom-variables';
 @import 'scss/settings/theme-variables';
 
 // bootstrap
-@import 'node_modules/bootstrap/scss/bootstrap';
-@import 'node_modules/bootstrap/scss/mixins';
-@import 'node_modules/bootstrap/scss/utilities';
-@import 'node_modules/bootstrap/scss/utilities/api';
+@import '../node_modules/bootstrap/scss/bootstrap';
+@import '../node_modules/bootstrap/scss/mixins';
+@import '../node_modules/bootstrap/scss/utilities';
+@import '../node_modules/bootstrap/scss/utilities/api';
 @import '../node_modules/bootstrap/dist/css/bootstrap.css';
 @import 'scss/themes/general';
 @import 'scss/themes/generic';
@@ -55,7 +51,6 @@ $manage-shop-theme: mat.define-light-theme((
 // icon
 @import 'scss/themes/font/datta-icon';
 @import 'scss/themes/font/feather';
-@import 'scss/themes/font/fontawesome';
 @import 'scss/themes/font/flaticon';
 
 // component
@@ -67,9 +62,46 @@ $manage-shop-theme: mat.define-light-theme((
 
 // dashboard
 @import 'scss/themes/pages/dashboard.scss';
-@import 'scss/themes/pages/authentication';
-
-@import 'scss/themes/chat/chat';
 
 // custom
 @import 'scss/themes/custom';
+
+.mat-mdc-cell {
+    font-family: 'Poppins', sans-serif;
+}
+
+.mat-mdc-header-cell {
+    font-family: cursive;
+}
+
+.table-responsive {
+    display: block;
+    width: 100%;
+    overflow-x: auto;
+}
+
+mat-table {
+    width: 1200px;
+    max-width: 1200px;
+    margin-bottom: 1rem;
+    display: table;
+    border-collapse: collapse;
+    margin: 0px;
+}
+
+mat-row,
+mat-header-row {
+    display: table-row;
+}
+
+mat-cell,
+mat-header-cell {
+    word-wrap: initial;
+    display: table-cell;
+    padding: 0px 5px;
+    line-break: unset;
+    width: auto;
+    white-space: nowrap;
+    overflow: hidden;
+    vertical-align: middle;
+}
