--- a/src/app/pages/order/order-completed/order-completed.component.html
+++ b/src/app/pages/order/order-completed/order-completed.component.html
@@ -1,6 +1,5 @@
 <div class="table-responsive">
     <table mat-table [dataSource]="dataSource" matSort (matSortChange)="announceSortChange($event)">
-
         <ng-container matColumnDef="id">
             <th mat-header-cell *matHeaderCellDef mat-sort-header class="fw-bold"> Mã </th>
             <td mat-cell *matCellDef="let order" class="text-truncate">
@@ -17,10 +16,7 @@
 
         <ng-container matColumnDef="status">
             <th mat-header-cell *matHeaderCellDef mat-sort-header class="fw-bold"> Trạng thái </th>
-            <td mat-cell *matCellDef="let order" class="text-truncate">
-                <i class="me-1 fas" [ngClass]="getStatusIcon(order.status)"></i>
-                {{ getStatusTranslation(order.status) }}
-            </td>
+            <td mat-cell *matCellDef="let order" class="text-truncate text-success"> Đã hoàn thành </td>
         </ng-container>
 
         <ng-container matColumnDef="createdAt">
@@ -36,19 +32,8 @@
         <ng-container matColumnDef="actions">
             <th mat-header-cell *matHeaderCellDef class="fw-bold">Thao tác</th>
             <td mat-cell *matCellDef="let order" class="text-truncate">
-                <button mat-icon-button title="Xem chi tiết" (click)="openOrderDetails(order)">
+                <button mat-icon-button color="primary" (click)="openOrderDetails(order)">
                     <mat-icon>visibility</mat-icon>
-                </button>
-                <button *ngIf="order.status.toLowerCase() !== 'preparing'" mat-icon-button color="primary"
-                    (click)="changeStatusPreparing(order._id)">
-                    <mat-icon>done</mat-icon>
-                </button>
-                <button *ngIf="order.status.toLowerCase() === 'preparing'" mat-icon-button color="primary"
-                    (click)="changeStatusCompleted(order._id)">
-                    <mat-icon class="text-success">done</mat-icon>
-                </button>
-                <button mat-icon-button color="warn" title="Huỷ đơn hàng" (click)="changeStatusCanceled(order._id)">
-                    <mat-icon>close</mat-icon>
                 </button>
             </td>
         </ng-container>
