--- a/src/app/pages/product/product.component.html
+++ b/src/app/pages/product/product.component.html
@@ -4,14 +4,14 @@
         <ng-container matColumnDef="id">
             <th mat-header-cell *matHeaderCellDef mat-sort-header class="fw-bold"> Mã </th>
             <td mat-cell *matCellDef="let product" class="text-truncate">
-                {{product._id}}
+                {{product.productId}}
             </td>
         </ng-container>
 
         <ng-container matColumnDef="name">
             <th mat-header-cell *matHeaderCellDef mat-sort-header class="fw-bold text-truncate"> Tên sản phẩm </th>
             <td mat-cell *matCellDef="let product" class="text-truncate" title="{{product.name}}">
-                {{product.name}}
+                {{product.productName}}
             </td>
         </ng-container>
 
@@ -22,7 +22,7 @@
 
         <ng-container matColumnDef="type">
             <th mat-header-cell *matHeaderCellDef mat-sort-header class="fw-bold"> Loại </th>
-            <td mat-cell *matCellDef="let product" class="text-truncate"> {{product.type}} </td>
+            <td mat-cell *matCellDef="let product" class="text-truncate"> {{product.category.categoryName}} </td>
         </ng-container>
 
         <ng-container matColumnDef="actions">
