--- a/src/app/pages/order/order.component.html
+++ b/src/app/pages/order/order.component.html
@@ -4,7 +4,7 @@
         <ng-container matColumnDef="id">
             <th mat-header-cell *matHeaderCellDef mat-sort-header class="fw-bold"> Mã </th>
             <td mat-cell *matCellDef="let order" class="text-truncate">
-                {{order._id}}
+                {{order.id}}
             </td>
         </ng-container>
 
@@ -18,37 +18,32 @@
         <ng-container matColumnDef="status">
             <th mat-header-cell *matHeaderCellDef mat-sort-header class="fw-bold"> Trạng thái </th>
             <td mat-cell *matCellDef="let order" class="text-truncate">
-                <i class="me-1 fas" [ngClass]="getStatusIcon(order.status)"></i>
                 {{ getStatusTranslation(order.status) }}
             </td>
         </ng-container>
 
         <ng-container matColumnDef="createdAt">
             <th mat-header-cell *matHeaderCellDef mat-sort-header class="fw-bold"> Thời gian đặt </th>
-            <td mat-cell *matCellDef="let order" class="text-truncate"> {{order.createdAt}} </td>
+            <td mat-cell *matCellDef="let order" class="text-truncate"> {{formatDateTime(order.createdAt)}} </td>
         </ng-container>
 
         <ng-container matColumnDef="updatedAt">
             <th mat-header-cell *matHeaderCellDef mat-sort-header class="fw-bold"> Thời gian cập nhật </th>
-            <td mat-cell *matCellDef="let order" class="text-truncate"> {{order.updatedAt}} </td>
+            <td mat-cell *matCellDef="let order" class="text-truncate"> {{formatDateTime(order.updatedAt)}} </td>
         </ng-container>
 
         <ng-container matColumnDef="actions">
             <th mat-header-cell *matHeaderCellDef class="fw-bold">Thao tác</th>
             <td mat-cell *matCellDef="let order" class="text-truncate">
-                <button mat-icon-button title="Xem chi tiết" (click)="openOrderDetails(order)">
-                    <mat-icon>visibility</mat-icon>
+                <button mat-icon-button title="Xem chi tiết" color="primary" (click)="openOrderDetails(order)">
+                    <mat-icon>info</mat-icon>
                 </button>
-                <button *ngIf="order.status.toLowerCase() !== 'preparing'" mat-icon-button color="primary"
-                    (click)="changeStatusPreparing(order._id)">
-                    <mat-icon>done</mat-icon>
+                <button *ngIf="order.status.toLowerCase() !== 'completed'" mat-icon-button title="Cập nhật trạng thái"
+                    (click)="updateOrderStatus(order.id, order.status)">
+                    <mat-icon>task_alt</mat-icon>
                 </button>
-                <button *ngIf="order.status.toLowerCase() === 'preparing'" mat-icon-button color="primary"
-                    (click)="changeStatusCompleted(order._id)">
-                    <mat-icon class="text-success">done</mat-icon>
-                </button>
-                <button mat-icon-button color="warn" title="Huỷ đơn hàng" (click)="changeStatusCanceled(order._id)">
-                    <mat-icon>close</mat-icon>
+                <button mat-icon-button color="warn" title="Xoá đơn hàng" (click)="deleteOrderById(order.id)">
+                    <mat-icon>delete_forever</mat-icon>
                 </button>
             </td>
         </ng-container>
