--- a/src/app/pages/table/table.component.html
+++ b/src/app/pages/table/table.component.html
@@ -2,9 +2,16 @@
     <table mat-table [dataSource]="dataSource" matSort (matSortChange)="announceSortChange($event)">
 
         <ng-container matColumnDef="tableNumber">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header class="fw-bold"> Số </th>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header class="fw-bold"> Số bàn </th>
             <td mat-cell *matCellDef="let table" class="text-truncate">
-                {{table.tableNumber}}
+                Bàn số {{table.tableNumber}}
+            </td>
+        </ng-container>
+
+        <ng-container matColumnDef="numberOfSeats">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header class="fw-bold"> Số chỗ ngồi </th>
+            <td mat-cell *matCellDef="let table" class="text-truncate">
+                Có {{table.numberOfSeats}} chỗ ngồi
             </td>
         </ng-container>
 
@@ -18,6 +25,9 @@
         <ng-container matColumnDef="actions">
             <th mat-header-cell *matHeaderCellDef class="fw-bold">Thao tác</th>
             <td mat-cell *matCellDef="let order" class="text-truncate">
+                <button mat-icon-button title="Xem thông tin" color="primary">
+                    <mat-icon>info</mat-icon>
+                </button>
             </td>
         </ng-container>
 
