--- a/src/app/pages/order/order-detail/order-detail.component.html
+++ b/src/app/pages/order/order-detail/order-detail.component.html
@@ -9,7 +9,7 @@
         </div>
         <div class="col d-flex align-items-center">
             <div class="me-3">
-                <p class="mb-0 text-truncate"><strong>Tên:</strong> {{ item.name }}</p>
+                <p class="mb-0 text-truncate"><strong>Tên:</strong> {{ item.productName }}</p>
                 <p class="mb-0 text-truncate"><strong>Giá:</strong>
                     {{ item.price | currency: 'VND' }}
                 </p>
